src/test/resources/typeSystemTestModels/invalid/expressions/BooleanNot.java
package typeSystemTestModels.invalid.expressions;

public class BooleanNot {
  boolean b = !1;
  float l = 1;
  boolean c = ~l;
}